# csft

./: .appveyor.yml  .gitignore  .travis.yml  CHANGES.rst  README.md  README.rst  appveyor.yml  requirements.txt  setup.cfg  setup.py
csft/: __info__.py  __init__.py  __main__.py  _csft.py  _meta.py  csft.py
src/csft/: __init__.py  __main__.py  _csft.py
tests/: test_csft.py  test_init.py  test_main.py  test_meta.py
