[metadata]
long_description = file: README.rst, CHANGES.rst

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
          --cov csft
          --pep8
          --flakes
python_files = tests/*
mock_use_standalone_module = true
flakes-ignore = tests/* ALL
                **/__init__.py UnusedImport
