[metadata]
long_description = file: README.rst, CHANGES.rst

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
          --cov csft
          --pep8
          --flakes
          --isort
          --yapf
python_files = tests/*
mock_use_standalone_module = true
flakes-ignore = tests/* ALL
                **/__init__.py UnusedImport

[tool:isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
known_first_party = csft

[yapf]
based_on_style = facebook
coalesce_brackets = true
dedent_closing_brackets = true
